{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 287,
  "lineage": "e5f95cfc-620f-90fc-bc56-bd80630addc4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036785638465:security-group/sg-0d5c7b735c8c2051e",
            "description": "seila",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "securitygroupzinho"
                ]
              }
            ],
            "id": "sg-0d5c7b735c8c2051e",
            "name": "terraform-20250122163059372000000001",
            "tags": {
              "Name": "securitygroupzinho",
              "account": "personal",
              "environment": "testing",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372fcfa553d490cf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036785638465:vpc/vpc-0372fcfa553d490cf",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f122e11721268baa",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-aaf3a7d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "MainVPC"
                ]
              }
            ],
            "id": "vpc-0372fcfa553d490cf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d036b24f085a45f5",
            "owner_id": "036785638465",
            "tags": {
              "Name": "MainVPC",
              "account": "personal",
              "environment": "testing",
              "managed_by": "terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:036785638465:loadbalancer/net/k3s-nlb/cf64bff746f95d45",
            "arn_suffix": "net/k3s-nlb/cf64bff746f95d45",
            "dns_name": "k3s-nlb-cf64bff746f95d45.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:036785638465:loadbalancer/net/k3s-nlb/cf64bff746f95d45",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "k3s-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0922a334788e1386c"
              }
            ],
            "subnets": [
              "subnet-0922a334788e1386c"
            ],
            "tags_all": {
              "account": "personal",
              "environment": "testing",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-0372fcfa553d490cf",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "data.aws_subnets.selected",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:036785638465:listener/net/k3s-nlb/cf64bff746f95d45/421220fc5bbd4f4f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:036785638465:targetgroup/k3s-masters-tg/fd933f634caa29e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:036785638465:listener/net/k3s-nlb/cf64bff746f95d45/421220fc5bbd4f4f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:036785638465:loadbalancer/net/k3s-nlb/cf64bff746f95d45",
            "mutual_authentication": [],
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "account": "personal",
              "environment": "testing",
              "managed_by": "terraform"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.masters_tg",
            "data.aws_subnets.selected",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "masters_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:036785638465:targetgroup/k3s-masters-tg/fd933f634caa29e8",
            "arn_suffix": "targetgroup/k3s-masters-tg/fd933f634caa29e8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:036785638465:targetgroup/k3s-masters-tg/fd933f634caa29e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:036785638465:loadbalancer/net/k3s-nlb/cf64bff746f95d45"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k3s-masters-tg",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "account": "personal",
              "environment": "testing",
              "managed_by": "terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0372fcfa553d490cf"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036785638465:security-group/sg-0e28915892bc9cc75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e28915892bc9cc75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250122193945548300000001",
            "name_prefix": "terraform-",
            "owner_id": "036785638465",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "account": "personal",
              "environment": "testing",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372fcfa553d490cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036785638465:security-group/sg-05f5753784c5246b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f5753784c5246b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20250122193945549300000002",
            "name_prefix": "terraform-",
            "owner_id": "036785638465",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "account": "personal",
              "environment": "testing",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372fcfa553d490cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}